--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
+*{
+  margin: 0;
+}
+
 :root {
   --primary-color:hsl(170, 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
-  font-size: 100%;
+  font-size: 62.5%;
 }
 
 body {
@@ -11,15 +15,24 @@ font-size: 1.6rem;
 text-align: center;
 }
 
+header{
+  width: 37.5rem;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 4.1rem;
+}
+
 h4{
   font-size: 1.4rem;
   color: var(--primary-color) ;
+  margin-bottom: 1.6rem;
 }
 
 h1{
   font-size: 3.4rem;
   color: var(--headline);
   line-height: 130%;
+  margin-bottom: 2.4rem;
 }
 
 p{
@@ -27,9 +40,25 @@ p{
 line-height: 150%;
 font-weight: 400;
 color: var(--paragraph);
+margin-bottom: 3.2rem;
 }
 
 button{
-  color: var(--primary-color);
-  border-radius: .8rem;
+  background: var(--primary-color);
+  border-radius: 4rem;
+  border: none;
+  margin-bottom: 6rem;
+  height: 6.2rem;
+  width: 26.3rem;
+  color: white;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+font-weight: 700;
+display: flex;
+align-items: center;
+justify-content: center;
+gap: 1.6rem;
+margin-right: auto;
+margin-left: auto;
 }
+
