--- a/style.css
+++ b/style.css
@@ -1,49 +1,51 @@
-*{
+* {
   margin: 0;
 }
 
 :root {
-  --primary-color:hsl(170, 100%, 26%);
+  --primary-color: hsl(170, 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
+  --brand-beige: hsl(39, 100%, 97%);
+  --brand-light: hsl(148, 23%, 89%);
   font-size: 62.5%;
 }
 
 body {
   font-family: 'DM Sans', sans-serif;
-font-size: 1.6rem;
-text-align: center;
+  font-size: 1.6rem;
+  text-align: center;
 }
 
-header{
+header {
   width: 37.5rem;
   margin-right: auto;
   margin-left: auto;
   margin-top: 4.1rem;
 }
 
-h4{
+h4 {
   font-size: 1.4rem;
-  color: var(--primary-color) ;
+  color: var(--primary-color);
   margin-bottom: 1.6rem;
 }
 
-h1{
+h1 {
   font-size: 3.4rem;
   color: var(--headline);
   line-height: 130%;
   margin-bottom: 2.4rem;
 }
 
-p{
+p {
   font-size: 1.8rem;
-line-height: 150%;
-font-weight: 400;
-color: var(--paragraph);
-margin-bottom: 3.2rem;
+  line-height: 150%;
+  font-weight: 400;
+  color: var(--paragraph);
+  margin-bottom: 3.2rem;
 }
 
-button{
+button {
   background: var(--primary-color);
   border-radius: 4rem;
   border: none;
@@ -53,12 +55,60 @@ button{
   color: white;
   text-transform: uppercase;
   font-size: 1.4rem;
-font-weight: 700;
-display: flex;
-align-items: center;
-justify-content: center;
-gap: 1.6rem;
-margin-right: auto;
-margin-left: auto;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+  margin-right: auto;
+  margin-left: auto;
 }
 
+.stats {
+  width: 32.7rem;
+  padding-block: 4rem;
+  /* margin-inline: Referente ao width e heidht; */
+  margin-inline: auto;
+  background-color: var(--brand-beige);
+border: 1px solid var(--brand-light);
+border-radius: .6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6rem;
+}
+
+.stat h3 {
+  font-size: 4.8rem;
+  color: var(--headline);
+  line-height: 130%;
+  margin-bottom: 0.4rem;
+}
+
+.stat p {
+  margin: 0%;
+  color: var(--primary-color);
+  font-size: 1.6rem;
+  line-height: 150%;
+}
+
+header img{
+  width: 26.4rem;
+  display: block;
+  margin-inline: auto;
+  object-position: 0 2rem;
+}
+
+header::before {
+  content: "";
+  width: 100vw;
+  height: 108rem;
+  background-color: var(--brand-light);
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+/*Parei o vidio na minutagem de 32:29*/
