Organizando o css e criando o navbar.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*GERAL==============*/
 * {
   margin: 0;
 }
@@ -17,6 +18,7 @@ body {
   text-align: center;
 }
 
+/*HEADER===========*/
 header {
   width: 37.5rem;
   margin-right: auto;
@@ -24,20 +26,39 @@ header {
   margin-top: 4.1rem;
 }
 
-h4 {
+header::before {
+  content: "";
+  width: 100vw;
+  height: 108rem;
+  background-color: var(--brand-light);
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+header img{
+  width: 26.4rem;
+  display: block;
+  margin-inline: auto;
+  object-position: 0 2rem;
+}
+
+header h4 {
   font-size: 1.4rem;
   color: var(--primary-color);
   margin-bottom: 1.6rem;
 }
 
-h1 {
+header h1 {
   font-size: 3.4rem;
   color: var(--headline);
   line-height: 130%;
   margin-bottom: 2.4rem;
 }
 
-p {
+header p {
   font-size: 1.8rem;
   line-height: 150%;
   font-weight: 400;
@@ -45,7 +66,7 @@ p {
   margin-bottom: 3.2rem;
 }
 
-button {
+header button {
   background: var(--primary-color);
   border-radius: 4rem;
   border: none;
@@ -92,23 +113,12 @@ border-radius: .6rem;
   line-height: 150%;
 }
 
-header img{
-  width: 26.4rem;
-  display: block;
-  margin-inline: auto;
-  object-position: 0 2rem;
+/*NAVIGATION=========*/
+nav{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-header::before {
-  content: "";
-  width: 100vw;
-  height: 108rem;
-  background-color: var(--brand-light);
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
 
-/*Parei o vidio na minutagem de 32:29*/
+minutagem 38:31
