--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
   --paragraph: hsl(210, 9%, 31%);
   --brand-beige: hsl(39, 100%, 97%);
   --brand-light: hsl(148, 23%, 89%);
+
   font-size: 62.5%;
+
+  --nav-height: 7.2rem;
 }
 
 body {
@@ -18,18 +21,21 @@ body {
   text-align: center;
 }
 
+.wrapper {
+  width: 37.5rem;
+  margin-inline: auto;
+  padding-inline: 2.4rem;
+}
+
 /*HEADER===========*/
 header {
-  width: 37.5rem;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 4.1rem;
+  padding-top: calc(4.1rem + var(--nav-height));
 }
 
 header::before {
-  content: "";
+  content: '';
   width: 100vw;
-  height: 108rem;
+  height: calc(108rem + var(--nav-height));
   background-color: var(--brand-light);
   display: block;
   position: absolute;
@@ -38,7 +44,7 @@ header::before {
   z-index: -1;
 }
 
-header img{
+header img {
   width: 26.4rem;
   display: block;
   margin-inline: auto;
@@ -91,8 +97,8 @@ header button {
   /* margin-inline: Referente ao width e heidht; */
   margin-inline: auto;
   background-color: var(--brand-beige);
-border: 1px solid var(--brand-light);
-border-radius: .6rem;
+  border: 1px solid var(--brand-light);
+  border-radius: 0.6rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -114,11 +120,32 @@ border-radius: .6rem;
 }
 
 /*NAVIGATION=========*/
-nav{
+nav {
   display: flex;
-  align-items: center;
-  justify-content: center;
+
+  height: var(--nav-height);
+
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
+nav .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-minutagem 38:31
+nav.scroll {
+  background: var(--primary-color);
+  width: 100vw;
+}
+
+nav.scroll svg:nth-child(1) path {
+  fill: white;
+}
+
+nav.scroll svg:nth-child(2) path {
+  stroke: white;
+}
