--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /*GERAL==============*/
 * {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
@@ -15,6 +17,12 @@
   --nav-height: 7.2rem;
 }
 
+html,
+body{
+  width: 100%;
+  height: 100%;
+}
+
 body {
   font-family: 'DM Sans', sans-serif;
   font-size: 1.6rem;
@@ -27,6 +35,10 @@ body {
   padding-inline: 2.4rem;
 }
 
+ul{
+  list-style: none;
+
+}
 /*HEADER===========*/
 header {
   padding-top: calc(4.1rem + var(--nav-height));
@@ -34,7 +46,7 @@ header {
 
 header::before {
   content: '';
-  width: 100vw;
+  width: 100%;
   height: calc(108rem + var(--nav-height));
   background-color: var(--brand-light);
   display: block;
@@ -149,3 +161,28 @@ nav.scroll svg:nth-child(1) path {
 nav.scroll svg:nth-child(2) path {
   stroke: white;
 }
+
+/* MENU-EXPENDEND========================*/
+.menu, .close-menu{
+  opacity: 0;
+  visibility: hidden;
+}
+
+body.menu-expended .menu,
+body.menu-expended .close-menu{
+  opacity: 1;
+  visibility: visible;
+}
+
+body.menu-expended .menu{
+position: fixed;
+top: 0;
+left: 0;
+background: var(--primary-color);
+}
+
+body.menu-expended nav{
+  position: relative;
+}
+
+/*minutagem 1:31:22*/
